--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 
 <body>
   <input data-action="input">
+  <button type="button" data-action="reset-button" class="reset-button-style">RESET</button>
   <div class="container"></div>
   <script src="index.js"></script>
 </body>
