--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="../node_modules/@pnotify/core/dist/PNotify.css" rel="stylesheet" type="text/css" />
   <link href="../node_modules/@pnotify/mobile/dist/PNotifyMobile.css" rel="stylesheet" type="text/css" />
-  <title>Заголовок страницы</title>
+  <title>Search country site</title>
 </head>
 
 <body>
-  <input data-action="input">
-  <button type="button" data-action="reset-button" class="reset-button-style">RESET</button>
+  <div class="input-btn-container">
+    <input data-action="input" class="input" placeholder="Country name">
+    <button type="button" data-action="reset-button" class="reset-button">Update country</button>
+  </div>
   <div class="container"></div>
   <script src="index.js"></script>
 </body>
